<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <Button
        android:id="@+id/fruit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="isFruit"
        android:text="@string/fruit_or_veggie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pasta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="isPasta"
        android:text="@string/pasta_or_pie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fruit" />

    <Button
        android:id="@+id/meat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="isMeat"
        android:text="@string/meat"
        app:layout_constraintBottom_toTopOf="@+id/pasta"
        app:layout_constraintEnd_toStartOf="@+id/fruit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fruit" />

    <Button
        android:id="@+id/soup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="isSoup"
        android:text="@string/soup"
        app:layout_constraintBottom_toTopOf="@+id/pasta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fruit"
        app:layout_constraintTop_toBottomOf="@+id/fruit" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/what_type_of_recipe_n_would_you_like_to_add"
        android:textColor="#2069A3"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fruit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="isBread"
        android:text="@string/bread"
        app:layout_constraintBottom_toTopOf="@+id/fruit"
        app:layout_constraintEnd_toStartOf="@+id/fruit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="isDessert"
        android:text="@string/dessert"
        app:layout_constraintBottom_toTopOf="@+id/fruit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fruit"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Title"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="next"
        android:text="Next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="done"
        android:text="Done"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next" />
</androidx.constraintlayout.widget.ConstraintLayout>